force-app/main/default/objects/FSL__Optimization_Request__c/fields/Filter_By_Boolean_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Filter_By_Boolean_API_Name__c</fullName>
    <label>Filter By Boolean API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>