force-app/main/default/objects/FSL__Optimization_Request__c/fields/Is_Long_Term_Optimization_Request__c.field-meta.xml
<CustomField>
    <fullName>Is_Long_Term_Optimization_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Long Term Optimization Request</label>
    <type>Checkbox</type>
</CustomField>