force-app/main/default/objects/FSL__Optimization_Request__c/fields/Long_Term_Request_Finish__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Request_Finish__c</fullName>
    <label>Long Term Request Finish</label>
    <type>DateTime</type>
</CustomField>