force-app/main/default/objects/FSL__Optimization_Request__c/fields/Originating_Optimization_Request__c.field-meta.xml
<CustomField>
    <fullName>Originating_Optimization_Request__c</fullName>
    <label>Originating Optimization Request</label>
    <length>100</length>
    <type>Text</type>
</CustomField>