force-app/main/default/objects/FSL__Optimization_Request__c/fields/Parent_Finish__c.field-meta.xml
<CustomField>
    <fullName>Parent_Finish__c</fullName>
    <formula>Parent_Optimization_Request__r.FSL__Finish__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Finish</label>
    <type>DateTime</type>
</CustomField>