force-app/main/default/objects/FSL__Optimization_Request__c/fields/Parent_Optimization_Request__c.field-meta.xml
<CustomField>
    <fullName>Parent_Optimization_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Optimization Request</label>
    <referenceTo>FSL__Optimization_Request__c</referenceTo>
    <relationshipLabel>Optimization Requests</relationshipLabel>
    <relationshipName>Optimization_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>