force-app/main/default/objects/FSL__Optimization_Request__c/fields/Parent_Start__c.field-meta.xml
<CustomField>
    <fullName>Parent_Start__c</fullName>
    <formula>Parent_Optimization_Request__r.FSL__Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Start</label>
    <type>DateTime</type>
</CustomField>