force-app/main/default/objects/FSL__Optimization_Request__c/fields/Sub_Request_Horizon_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Sub_Request_Horizon_In_Days__c</fullName>
    <label>Sub Request Horizon In Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>